--- a/aboutTab1.html
+++ b/aboutTab1.html
@@ -2,158 +2,9 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en">
 <head>
 	<meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
-	<title>Tab</title>
-	<style type="text/css">
-	.clearfloat{
-		zoom: 1;
-	}
-	.clearfloat:after{
-		display: block;
-		content: "";
-		clear: both;
-	}
-	ul {
-		margin: 0px;
-		padding: 0px;
-		list-style: none;
-	}
-	.tab {
-		/*display: inline-block;*/
-		border: 2px solid black;
-		padding: 5px;
-		margin-bottom: 10px;
-	}
-	.tab-menuWrapper li {
-		float: left;
-		padding: 0 10px;
-		height: 20px;
-		border: 1px solid red;
-		border-bottom: none;
-		margin-right: 5px;
-		cursor: pointer;
-	}
-	.tab-current-Menu {
-		color: #fff;
-		background: #000;
-	}
-	div.tab-contentWrapper{
-		width: 500px;
-		height: 100px;
-		border: 1px solid green;
-	}
-	</style>
+	<title>Document</title>
 </head>
 <body>
-	<div class="tab J_tab">
-		<ul class="tab-menuWrapper clearfloat">
-			<li class="J_tab-menu tab-current-Menu">menu1-1</li>
-			<li class="J_tab-menu">menu1-2</li>
-			<li class="J_tab-menu">menu1-3</li>
-		</ul>
-		<div class="tab-contentWrapper">
-			<div class="J_tab-content">
-				<div>content1-1</div>
-				<ul>abc</ul>
-			</div>
-			<div class="J_tab-content" style="display:none;">
-				<p>content1-2</p>
-				<div>abc</div>
-			</div>
-			<div class="J_tab-content" style="display:none;">content1-3</div>
-		</div>
-	</div>
-	<div class="tab J_tab">
-		<ul class="tab-menuWrapper clearfloat">
-			<li class="J_tab-menu tab-current-Menu">menu2-1</li>
-			<li class="J_tab-menu">menu2-2</li>
-		</ul>
-		<div class="tab-contentWrapper">
-			<div class="J_tab-content">
-				<div>content2-1</div>
-				<ul>abc</ul>
-			</div>
-			<div class="J_tab-content" style="display:none;">
-				<p>content2-2</p>
-				<div>abc</div>
-			</div>
-		</div>
-	</div>
-	<div class="tab J_tab">
-		<ul class="tab-menuWrapper clearfloat">
-			<li class="J_tab-menu tab-current-Menu">menu3-1</li>
-			<li class="J_tab-menu">menu3-2</li>
-			<li class="J_tab-menu">menu3-3</li>
-			<li class="J_tab-menu">menu3-4</li>
-			<li class="J_tab-menu">menu3-5</li>
-		</ul>
-		<div class="tab-contentWrapper">
-			<div class="J_tab-content">
-				<div>content3-1</div>
-				<ul>abc</ul>
-			</div>
-			<div style="display:none;" class="J_tab-content">
-				<p>content3-2</p>
-				<div>abc</div>
-			</div>
-			<div style="display:none;" class="J_tab-content"><p>content3-3</p></div>
-			<div style="display:none;" class="J_tab-content">
-				<p>content3-4</p>
-				<div>abc</div>
-			</div>
-			<div style="display:none;" class="J_tab-content"><p>content3-5</p></div>
-		</div>
-	</div>
-	<script type="text/javascript">
-	var GLOBAL = {};
-	GLOBAL.namespace = function(str){
-		var arr = str.split("."), o = GLOBAL;
-		for(var i = arr[0] == "GLOBAL" ? 1 : 0; i < arr.length; i++){
-			o[arr[i]] = o[arr[i]] || {};
-			o = o[arr[i]];
-		}
-	}
-	GLOBAL.namespace("DOM");
-	GLOBAL.DOM.getElementsByClassName = function(str, root, tag){
-		if(root){
-			root = typeof root == "string" ? document.getElementById(root) : root;
-		}else{
-			root = document.body;
-		}
-		tag = tag || "*";
-		var els = root.getElementsByTagName(tag), arrResult = [];
-		for(var i = 0; i < els.length; i++){
-			for(var j = 0, k = els[i].className.split(" "); j < k.length; j++){
-				if(k[j] == str){
-					arrResult.push(els[i]);
-					break;
-				}
-			}
-		}
-		return arrResult;
-	}
-	function setTab(root){
-		var tabMenus = GLOBAL.DOM.getElementsByClassName("J_tab-menu", root),
-			tabContents = GLOBAL.DOM.getElementsByClassName("J_tab-content", root);
-		for(var i = 0; i < tabMenus.length; i++){
-			tabMenus[i]._index = i;
-			tabMenus[i].onclick = function(){
-				for(var j = 0; j < tabContents.length; j++){
-					tabContents[j].style.display = "none";
-				}
-				tabContents[this._index].style.display = "block";
-				var currentMenu = GLOBAL.DOM.getElementsByClassName("tab-current-Menu",root)[0];
-				if(currentMenu){
-					currentMenu.className = "";
-				}
-				this.className = "tab-current-Menu"; //将原有的类名清空了，居然上面的点击事件还有效
-
-			}
-		}
-	}
-	var tabs = GLOBAL.DOM.getElementsByClassName("J_tab");
-	for(var i = 0; i < tabs.length; i++){
-		setTab(tabs[i]);
-	}
-	</script>
+	
 </body>
 </html>
